# api-driven-app

app-dev-lifecycle/2-code-gen/: README.md
docker/: docker-compose-java.yaml
todo/: README.md  openapi.yaml  setup.cfg
todo-java/: package.json  pom.xml
todo-java/.openapi-generator/: FILES
todo-java/src/main/java/io/fluentqa/todo/: RFC3339DateFormat.java  ToDoApp.java
todo-java/src/main/java/io/fluentqa/todo/api/: ApiUtil.java  HealthyApi.java  HealthyApiController.java  ReadyApi.java  ReadyApiController.java  ToDoApi.java  ToDoV1ApiController.java
todo-java/src/main/java/io/fluentqa/todo/configuration/: HomeController.java  SpringDocConfiguration.java
todo-java/src/main/java/io/fluentqa/todo/entity/: ToDoEntity.java
todo-java/src/main/java/io/fluentqa/todo/model/: Error.java  Todo.java
todo-java/src/main/java/io/fluentqa/todo/repository/: TodoRepository.java
todo-java/src/main/java/io/fluentqa/todo/view/: ToDoMainView.java
todo-java/src/main/resources/: application.properties  openapi.yaml
todo-java/src/test/java/org/todo/: OpenApiGeneratorApplicationTests.java
todo-py-fastapi/: pyproject.toml
todo-py-fastapi/app/: main.py  models.py
todo/.openapi-generator/: FILES
todo/src/openapi_server/: main.py
todo/src/openapi_server/apis/: healthcheck_api.py  todo_api.py
todo/src/openapi_server/models/: error.py  todo.py
todo/tests/: test_healthcheck_api.py  test_todo_api.py
