[tool.poetry]
name = "todo-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"

[tool.poetry.dev-dependencies]
fastapi-code-generator = "^0.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
